--- a/Accenture BR/public_html/css/main.css
+++ b/Accenture BR/public_html/css/main.css
@@ -1,3 +1,76 @@
+@font-face {
+    font-family: 'atrotissemisansregular';
+    src: url('fonts/atrotissemisans-webfont.eot');
+    src: url('fonts/atrotissemisans-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/atrotissemisans-webfont.woff') format('woff'),
+         url('fonts/atrotissemisans-webfont.ttf') format('truetype'),
+         url('fonts/atrotissemisans-webfont.svg#atrotissemisansregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+@font-face {
+    font-family: 'atrotissemisans-extraboldRg';
+    src: url('fonts/atrotissemisans-extrabold-webfont.eot');
+    src: url('fonts/atrotissemisans-extrabold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/atrotissemisans-extrabold-webfont.woff') format('woff'),
+         url('fonts/atrotissemisans-extrabold-webfont.ttf') format('truetype'),
+         url('fonts/atrotissemisans-extrabold-webfont.svg#atrotissemisans-extraboldRg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+@font-face {
+    font-family: 'atrotissansserifregular';
+    src: url('fonts/atrotissansserif-webfont.eot');
+    src: url('fonts/atrotissansserif-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/atrotissansserif-webfont.woff') format('woff'),
+         url('fonts/atrotissansserif-webfont.ttf') format('truetype'),
+         url('fonts/atrotissansserif-webfont.svg#atrotissansserifregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+@font-face {
+    font-family: 'atrotissansserif-boldregular';
+    src: url('fonts/atrotissansserif-bold-webfont.eot');
+    src: url('fonts/atrotissansserif-bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/atrotissansserif-bold-webfont.woff') format('woff'),
+         url('fonts/atrotissansserif-bold-webfont.ttf') format('truetype'),
+         url('fonts/atrotissansserif-bold-webfont.svg#atrotissansserif-boldregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+.sliderContainer {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+}
+
+.iosSlider {
+	position: relative;
+	top: 0;
+	left: 0;
+	overflow: hidden;
+	width: 100%;
+	height: 884px;
+}
+
+.iosSlider .slider {
+	width: 100%;
+	height: 100%;
+}
+
+.iosSlider .slider .item {
+	float: left;
+	width: 100%;
+	height: 100%;
+}
+
 /*
  * HTML5 Boilerplate
  *
